Edited wiki page through web user interface.

--- a/wiki/GoInternals.wiki
+++ b/wiki/GoInternals.wiki
@@ -7,15 +7,27 @@ The material here is gathered from various sources and in some cases is derived 
 = GoRoutines =
 
 == History ==
-GoRoutines in Go are based upon previous work done by the Go inventors at Bell Labs. A good account of this history can be here:
+GoRoutines in Go are based the concept of coroutines proposed by Hoare. The implementation builds upon previous work done by the Go inventors at Bell Labs. A good account of this history can be here:
 
 [http://swtch.com/~rsc/thread/ http://swtch.com/~rsc/thread/]
 
+A simpler version of the goroutine concept can be found in Russ Cox's [http://swtch.com/libtask/ libtask C library].
+
+== Implementation Details == 
+
+*This section is to be verified*
+
 Goroutines are multiplexed across threads. The goroutine's stack is managed by the Go compiler/runtime independently of the OS stack, which is why calling external C functions require the stacks to be switched. 
 
-Goroutines are cooperatively scheduled by the Go scheduler (implemented in runtime/proc.c). The Gosched(0 is called at suitable times, such as when a goroutine is about to block in a system call or when getting a lock.
+Goroutines are cooperatively scheduled by the Go scheduler (implemented in runtime/proc.c). The Go scheduler is called at suitable times, such as when a goroutine is about to block in a system call or when getting a lock.
 
 The Go runtime maintains a pool of threads for running goroutines. If a particular goroutine will block due to a system call, a new thread is created if there are other goroutines waiting to run. The runtime requires that either goroutines be blocked in a system call, or at least one goroutine must be runnable. If this is not true, then the runtime aborts with an error reporting a deadlock. 
+
+The main advantage of goroutines are that they allow a large number of concurrent activities to be executed in parallel using a small number of threads. Unlike threadpool implementations in other languages, a goroutine that blocks due to synchronisation, does not occupy a thread. Instead it is moved out to allow other goroutines to run. 
+
+External system calls or calls to C function libraries could block the thread, which is why in this scenario, the runtime allocates a new thread if necessary.
+
+The main side effect of this implementation choice is that all synchronisation and calls to external libraries in Go programs must be done in cooperation with the Go scheduler. This makes external function calls expensive in the general case (see below), and also means that it is best to use the inbuilt synchronisation facilities in the language, such as channels, mutexes, etc.
 
 = Difference between goc and cgo =
 
@@ -130,4 +142,3 @@ diff -r 483f23f89563 src/pkg/runtime/cgocall.c
  } 
 
 }}}
-
