--- a/wiki/GoInternals.wiki
+++ b/wiki/GoInternals.wiki
@@ -19,7 +19,7 @@ A simpler version of the goroutine concept can be found in Russ Cox's [http://sw
 
 Goroutines are multiplexed across threads. The goroutine's stack is managed by the Go compiler/runtime independently of the OS stack, which is why calling external C functions require the stacks to be switched. 
 
-Goroutines are cooperatively scheduled by the Go scheduler (implemented in [http://golang.org/src/pkg/runtime/proc.c `$goroot/src/pkg/runtime/proc.c`]. The Go scheduler is called at suitable times, such as when a goroutine is about to block in a system call or when getting a lock or is allocating memory.
+Goroutines are cooperatively scheduled by the Go scheduler (implemented in [http://golang.org/src/pkg/runtime/proc.c $goroot/src/pkg/runtime/proc.c]. The Go scheduler is called at suitable times, such as when a goroutine is about to block in a system call or when getting a lock or is allocating memory.
 
 The Go runtime maintains a pool of threads for running goroutines. If a particular goroutine will block due to a system call, a new thread is created if there are other goroutines waiting to run. The runtime requires that either goroutines are blocked in a system call, or at least one goroutine is runnable. If this is not true, then the runtime aborts with an error reporting a deadlock. 
 
