--- a/wiki/GoInternals.wiki
+++ b/wiki/GoInternals.wiki
@@ -142,15 +142,32 @@ diff -r 483f23f89563 src/pkg/runtime/cgocall.c
  } 
 }}}
 
-= Blogs Posts on Go Internals = 
+= Blogs Posts on Go Internals =
 
-  * [http://research.swtch.com/2010/02/gos-package-name-space.html Go Package Namespace]
+=== Go Interfaces === 
+
   * [http://research.swtch.com/2009/12/go-data-structures-interfaces.html Go Interfaces]
-  * [http://research.swtch.com/2009/11/go-data-structures.html How Go types are implemented]
-  * [http://research.swtch.com/2010/03/broken-abstractions-in-go.html How defer statement is implemented]
-  * [http://www.airs.com/blog/archives/376 Implementation of panic/recover in GCC Go compiler]
-  * [http://www.airs.com/blog/archives/309 Go Linkage Names]
-  * [http://www.airs.com/blog/archives/283 Go New/Make]
   * [http://www.airs.com/blog/archives/277 Go Interfaces]
   * [http://www.airs.com/blog/archives/281 Go Interface values]
+
+=== Go Packages ===
+
+  * [http://research.swtch.com/2010/02/gos-package-name-space.html Go Package Namespace]
+  * [http://www.airs.com/blog/archives/309 Go Linkage Names]
+
+=== Go Types ===
+
+  * [http://research.swtch.com/2009/11/go-data-structures.html How Go types are implemented]
+
+=== Deferred statements and exception handling ===
+
+  * [http://research.swtch.com/2010/03/broken-abstractions-in-go.html How defer statement is implemented]
+  * [http://www.airs.com/blog/archives/376 Implementation of panic/recover in GCC Go compiler]
+
+=== Memory Allocation ===
+
+  * [http://www.airs.com/blog/archives/283 Go New/Make]
+
+=== Go Channels ===
+
   * [http://www.airs.com/blog/archives/275 Go Channels]
